--- a/src/App.css
+++ b/src/App.css
@@ -323,7 +323,7 @@ a:focus {
   width: 100%;
   object-fit: scale-down;
   border-radius: 5px;
-  margin-bottom: 20px;
+  margin: 0 auto 20px;
   box-shadow: 
     1px 2px 2px var(--common-shadow),
     2px 4px 4px var(--common-shadow),
@@ -358,6 +358,8 @@ a:focus {
 
 .logos-skills {
   display: flex;
+  margin: 0 auto;
+  max-width: 300px;
   flex-direction: row;
   gap: 20px;
   justify-content: center;
@@ -603,7 +605,7 @@ h6 {
   .weel-container {
     margin-top: -100px;
     scale: .7;
-    left: 42%;
+    left: 48%;
     max-width: 100%;
   }
   
@@ -611,11 +613,8 @@ h6 {
     font-size: 1.2rem;
   }
 
-  #perfil {
-    top: -41%;
-  }
-
   .topic-container {
-    top: -70%;
+    top: -30%;
+    margin-bottom: -150px;
   }
 }
